syntax = "proto3";

package proto;


message Submission {
    string date = 1;
    string language = 2;
    string problemStatus = 3;
    string problemTitle = 4;
    string problemLink = 5;
    string codeLink = 6;
}
message Contest {
    string contestName = 1;
    int64 rank = 2;
    int64 old_rating = 3;
    int64 new_rating = 4;
    int64 contest_id = 5;
}

message SubmissionResponse {
  repeated Submission submissions = 1;
  
}

message ContestResponse{
repeated Contest contests = 1;
}

message Request {
  string userHandle = 1;
}

message OperationStatus {
  bool status = 1;
  string userHandle = 2;
}

service FetchPlatformData {
  rpc getUserSubmissions(Request) returns (SubmissionResponse){};
  rpc getUserContests(Request) returns (ContestResponse);
  rpc getAllUserSubmissions(stream Request) returns (stream OperationStatus){};
}

