// Original file: proto/platformData.proto


export interface Submission {
  'date'?: (string);
  'language'?: (string);
  'problemStatus'?: (string);
  'problemTitle'?: (string);
  'problemLink'?: (string);
  'codeLink'?: (string);
}

export interface Submission__Output {
  'date'?: (string);
  'language'?: (string);
  'problemStatus'?: (string);
  'problemTitle'?: (string);
  'problemLink'?: (string);
  'codeLink'?: (string);
}
